# xlstruct

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  codeql-config.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  dependabot-uv-sync.yml  publish.yml
.serena/: project.yml
.serena/memories/xlstruct/: release-readiness-audit.md
examples/: basic_extraction.py  cloud_storage.py  custom_instructions.py  demo.py
src/xlstruct/: __init__.py  _tokens.py  cli.py  config.py  exceptions.py  extractor.py  mcp_server.py  storage.py  suggest.py
src/xlstruct/codegen/: cache.py  engine.py  executor.py  orchestrator.py  schema_utils.py  validation.py
src/xlstruct/codegen/backends/: __init__.py  base.py  docker.py  subprocess.py
src/xlstruct/encoder/: _formatting.py  base.py  compressed.py
src/xlstruct/extraction/: chunking.py  engine.py
src/xlstruct/prompts/: codegen.py  extraction.py  system.py
src/xlstruct/reader/: base.py  csv_reader.py  formula_eval.py  hybrid_reader.py
src/xlstruct/schemas/: batch.py  codegen.py  core.py  progress.py  report.py  suggest.py  usage.py  workbook.py
tests/: conftest.py  test_batch.py  test_cache.py  test_chunking.py  test_cli.py  test_codegen.py  test_confidence.py  test_config.py  test_cross_sheet.py  test_csv_reader.py  test_encoder.py  test_extractor.py  test_formatting.py  test_formula_eval.py  test_mcp_server.py  test_models.py  test_provenance.py  test_reader.py  test_stream.py  test_strict_formulas.py  test_suggest.py  test_tokens.py  test_workbook.py
tests/fixtures/: generate.py  schemas.py
tests/integration/: conftest.py  docker-compose.yml  test_extractor_cloud.py  test_storage.py
